chapter13/03-weight-based-routing/weight-based-routing/ism-app-virtual-service-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ism-app-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - ism-app-gateway
  http:
  - route:
    - destination:
        host: ism-app
        subset: v1
      weight: 40
    - destination:
        host: ism-app
        subset: v2
      weight: 60
